# network_opt

./: .gitignore  CMakeLists.txt  arcos_consolidados.csv  arcos_consolidados.xlsx  arcos_transporte.csv  ciclos_arcos.csv  ciclos_demandas.csv  ciclos_vertices.csv  dados_comp_arcos.csv  dados_comp_dem_forn.csv  dados_comp_vertices.csv  demandas_fornecimento.csv  main.cpp
.old/: arcos_consolidados.xlsx  arcos_localidades.csv
cmake/: FindCPLEX.cmake
criar_instancia/: Converter Municípios e capturar distancias.xlsm  arcos_consolidados.csv  criar_instatancia.py  dados.xlsx  demandas_fornecimento.csv  input.csv  input.xlsx  rodar_build_s10_f10_f10_c500_g100.bat  solver_ref.py  vertices_completo.csv  ~$arcos_consolidados.xlsx
dados/: arcos_consolidados.csv  ciclos.xlsx  dados.xlsx  dados_bkp_vol.xlsx  dados_componentes.xlsx  dados_oficiaismalha_arcos.csv  dados_oficiaismalha_dem_forn.csv  dados_oficiaismalha_vertices.csv  malha_arcos.csv  malha_dem_forn.csv  malha_vertices.csv  vertices_completo.csv
dados/dados_artificiais/: artificial_sup10_fac10_fcl10_clt500_gds100_dem_forn.csv  artificial_sup10_fac10_fcl10_clt500_gds100_vertices.csv
docs/: Apresentação - introdução ao CPLEX.pptx  Johnson's Algorithm - All simple cycles in directed graph - YouTube.url  Kosaraju's algorithm - Wikipedia.url  README.md  exemplo ciclo.ai  resumo johnsons algorithm.txt
resultados/: baseline_fluxos.csv  baseline_localidades.csv  baseline_saldos.csv  fluxos.csv  localidades.csv  resultados.xlsx  saldos.csv
